# tinysea

./: .clang-format  CMakeLists.txt  PPCallbacks.cpp  PPCallbacks.h  README.md  main.cpp  minexpr.cpp.orig  renamer.cpp  stdafx.h  test.cpp
include/: ASTVisitor.h  PPCallbacks.h  renamer.h  stdafx.h
src/: ASTVisitor.cpp  PPCallbacks.cpp  main.cpp  renamer.cpp
test/: expr.cpp  minexpr.cpp  minexpr.cpp.orig  test.cpp
